--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,8 @@ a {
 
 img {
   object-fit: cover;
+  object-position: 0 30%;
 }
 
-/* ----------Loading---------- */
-@import url("./loading.css");
+/* -------------Product------------- */
+@import url("./product.css");
