--- a/components/Loading/Loading.module.css
+++ b/components/Loading/Loading.module.css
@@ -1,7 +1,15 @@
 .loading {
   display: flex;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 9;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
+  background: #0008;
+  color: white;
 }
 
 .loading svg {
